[package]
name = "risky"
version = "0.1.0"
authors = ["jonay2000 <jonabent@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
volatile = "0.2.6"
lazy_static = {version="1.4.0", features=["spin_no_std"]}
spin = "0.5.2"
bitflags = "1.2.1"
static_assertions = "1.1.0"

[build-dependencies]
cc = "1.0.54"

[[bin]]
name = "risky"
test = true
bench = false

[profile.release]
codegen-units = 11
debug = false
opt-level = 3
lto = true

[profile.dev]
debug = true
opt-level = 0
lto = false